--- a/site/_assets/scss/blog.scss
+++ b/site/_assets/scss/blog.scss
@@ -185,7 +185,13 @@ div.article > h2, .blog-toc > h2 {
 }
 
 @media (max-width: 480px) {
+  .article .img {
+    float: none;
+    margin-left: auto;
+    margin-right: auto;
+  }
   .article blockquote {
     padding-left: 0.25em;
+    border-left: 2px solid #eee;
   }
 }
